force-app/main/default/objects/FEC_Application_History__c/FEC_Application_History__c.object-meta.xml
<CustomObject>
    <label>Application History</label>
    <nameField>
        <displayFormat>AHN - {0}</displayFormat>
        <label>Application History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>