force-app/main/default/objects/FEC_Application_History__c/fields/FEC_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Activity_ID__c</fullName>
    <description>Mã tác động</description>
    <label>Activity ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>