force-app/main/default/objects/FEC_Application_History__c/fields/FEC_Edit_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Edit_Date__c</fullName>
    <label>Edit Date</label>
    <type>DateTime</type>
</CustomField>